--- a/Joining/join.html
+++ b/Joining/join.html
@@ -25,8 +25,7 @@
    		<div class='submit-block'>
    			<div class='time-row'>Tuesday, September 13th, 12:30pm EST
    			</div>
-   			<button id='up-button'>register now
-            </button>
+   			<button id='up-button'>register now</button>
    		</div>
    		<div class="scroll">
    			<div class="sign">
